# OpenEnv-Hackathon

./: .gitignore  Dockerfile  README.md  baseline_inference.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_task_detection.py
.github/workflows/: main.yml
backend/: __init__.py  agent.py  api_routes.py  app.py  main.py  requirements.txt
backend/environment/: __init__.py  environment.py  models.py  snippet_generator.py  tasks.py
grader/: __init__.py  civerse_graders.py  code_review_graders.py
server/: app.py
