[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-environment"
version = "1.0.0"
description = "OpenEnv RL environment for code review agents"
authors = [{name = "Priyadeep Mullick, Subhro Koley"}]

requires-python = ">=3.10"

dependencies = [
    "flask",
    "flask-cors",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]